--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="action_logout">Logout</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+
+    <!-- Buttons -->
+    <string name="action_login">Log In</string>
+
+    <!-- Unregistered texts -->
+    <string name="main_unregister_text">¡Challenge your self to help the world!</string>
 </resources>
